style.css
/* ... */
.orderConfirmation::backdrop {
    background: rgba(0, 0, 0, 0.45);
}

.closeOrderBtn {
    position: absolute;
    top: 12px;
    right: 16px;

    border: none;
    background: transparent;

    color: white;
    font-size: 24px;

    cursor: pointer;
}

.orderConfirmationIcon {
    width: 64px;
    height: 64px;

    object-fit: contain;

    margin-bottom: 8px;
}

.orderConfirmationTitle {
    margin: 0 0 8px;
color: white;
    font-size: 32px;
}

.orderConfirmationText {
    margin: 0;

    font-size: 20px;

    color: #d0d0d0;
}

/* Order confirmation ende */

.mainFooter {
    background-color: #e76c1f;
    height: 200px;

    .mainFooterContent {
        padding-top: 20px;
        margin-top: 20px;
        display: flex;
        flex-direction: column;
        text-align: center;
        justify-content: center;
        gap: 10px;

        .imprint {
            order: 1;
        }

        .cookies {
            order: 2;
        }

        .copyright {
            order: 3;
        }

        span {
            color: white;
        }
    }

    .footerMobileNavigation {
        background-color: #363534;
        height: 80px;
        min-width: 300px;
        width: 100%;
        display: flex; /* show only on mobile */
        align-items: center;
        justify-content: center;
        position: fixed;
        left: 0;
        bottom: 0;

        .footerMobileNavBar {
            max-width: 320px;
            width: 100%;

            ul {
                display: flex;
                flex-direction: row;
                align-items: center;
                justify-content: space-around;
                list-style-type: none;
            }

            img {
                width: 40px;
                height: 40px;
            }

            .mobileCartBadge {
                display: none;
                position: absolute;
                top: -25%;
                left: 60%;
                display: flex;
            }
            .badgeDesign {
                height: 30px;
                width: 25px;
            }
        }
    }
}

/* region mediascreen */

@media screen and (min-width: 320px) {
    .cart {
        width: 280px;
    }
}

@media screen and (min-width: 375px) {
    .content {
        margin-top: 720px;
    }

    .articles {
        .articleCard {
            img {
                height: 150px;
            }
        }
    }

    .cart {
        width: 320px;
    }
}

@media screen and (min-width: 500px) {
    .articles {
        .articleCard {
            img {
                height: 200px;
            }
        }
    }
}

@media screen and (min-width: 768px) {
    .articles {
        .articleCard {
            width: 97%;
            height: 140px;
            flex-direction: row;
            gap: 20px;
            align-items: flex-start;
            padding-bottom: 10px;

            img {
                width: 25%;
                height: 120px;
            }
            .articleDescription {
                width: 50%;
                justify-content: center;
            }

            .articlePriceAndButton {
                width: 25%;
                height: 100%;
                flex-direction: column;
                align-items: flex-end;
                justify-content: space-between;
                padding-bottom: 10px;
            }
        }
    }
}
/* ... */

